# odde

./: .gitignore  Cargo.toml  README.md  config.example.toml  rustfmt.toml
.github/workflows/: rust.yml
files/: banner  banner_img  cc.yaml  config.toml  odde.xml  sshd  user-data.yaml  utask.service
installer/: Cargo.toml
installer/src/: main.rs
odde-pam/: Cargo.toml
odde-pam/src/: main.rs
odde-service/: Cargo.toml
odde-service/src/: fs.rs  lib.rs  main.rs  net.rs  ty.rs
utask/: Cargo.toml
utask-pam/: Cargo.toml
utask-pam/src/: main.rs
utask/src/: lib.rs  main.rs
