[package]
name = "installer"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
futures = "0.3.31"
log = "0.4.27"
mac_address = "1.1.8"
pretty_env_logger = "0.5.0"
reqwest = { version = "0.12.15", features = ["stream"] }
tempdir = "0.3.7"
tokio = { version = "1.44.2", features = ["full"] }
